--- a/templates/website/base_page.html
+++ b/templates/website/base_page.html
@@ -4,8 +4,8 @@
 {% block bodyclass %} single-page {% endblock %}
 
 {% block page_header %}
-<header class="container py-4">
-  <h2 class="section-title">{{ page.title }}</h2>
+<header class="container mt-5 mt-md-3 pt-4 pb-2">
+  <h2 class="section-title mb-0">{{ page.title }}</h2>
 </header>
 {% endblock %}
 
