--- a/static/css/main.css
+++ b/static/css/main.css
@@ -99,9 +99,15 @@ body.index .section {
 }
 
 body.index .navbar-custom {
-  background-color: transparent;
+  background-color: rgb(var(--bs-dark-rgb));
   padding-top: 20px;
   padding-bottom: 10px;
+}
+
+@media (min-width: 768px) {
+  body.index .navbar-custom {
+    background-color: transparent;
+  }
 }
 
 .navbar-custom .navbar-nav li {
@@ -153,8 +159,8 @@ body.index .navbar-custom {
 
 .site-header {
   width: 100%;
-  height: 33vh;
-  min-height: 33vh;
+  height: 50vh;
+  min-height: 50vh;
   position: relative;
   text-align: center;
   display: table;
@@ -177,10 +183,10 @@ body.index .navbar-custom {
   text-transform: uppercase;
   width: 100%;
   z-index: 1;
-  padding: 80px 15px 0;
+  padding: 100px 15px 0;
   display: table-cell;
   vertical-align: middle;
-  height: 33vh;
+  height: 50vh;
 }
 
 .site-header .intro h2 {
@@ -218,8 +224,21 @@ body.index .navbar-custom {
   transition: all 0.3s;
 }
 
+.portal-logo small {
+  display: block;
+  white-space: normal;
+}
+
 body.single-page {
   padding-top: 4.5rem;
+}
+
+.rich-text h1, .rich-text h2, .rich-text h3,
+.rich-text h4, .rich-text h5, .rich-text h6 {
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin: 1.5rem 0 1rem;
 }
 
 .ribbon {
